# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml
migrations/: 2254_create_subscriptions_table.sql
scripts/: init_db.ps1  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
