[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = "0.11.18"
serde = {version = "1.0.179", features = ["derive"] }
config = "0.13.3"
uuid = {version = "1.4.1", features = ["v4"]}
chrono = {version = "0.4.26", default-features = false, features = ["clock"]}

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]