[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version ="0.11.18", features = ["json", "rustls-tls"] }
serde = { version = "1.0.179", features = ["derive"] }
config = "0.13.3"
uuid = {version = "1.4.1", features = ["v4"]}
chrono = {version = "0.4.26", default-features = false, features = ["clock"]}
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = {version ="0.3.17", features = ["registry","env-filter"]}
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
secrecy = {version="0.8.0", features=["serde"]}
tracing-actix-web = "0.7.5"
serde-aux = "4.2.0"
validator = "0.16.1"
unicode-segmentation = "1.10.1"
rand = { version = "0.8", features=["std_rng"] }
anyhow = "1.0.40"
thiserror = "1.0.24"


[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
once_cell = "1.18.0"
claims = "0.7.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.61"
reqwest = { version = "0.11", features = ["json"] }
linkify = "0.9"